# website-health-monitor

./: .gitignore  .pylintrc  README.md  collector-cli.py  collector-ui.py  collector.py  mypy.ini  puppetter_test.py  pyproject.toml
link_checker/: __init__.py  collector.py  config.py  models.py  web-access.py  web_access.py
link_checker/obtainers/: __init__.py  beautiful-soup.py  pyppeteer.py
link_checker/ui/: index.html  tsconfig.json  ui.css  ui.js  ui.js.map  ui.ts
obtainers/: lynx.py  pyppeteer.py
