[tool.poetry]
name = "linkcollector"
version = "0.1.0"
description = ""
authors = ["Dmitry Golubkov <dmitry.golubkov@datadvance.net>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
