[tool.poetry]
name = "linkcollector"
version = "0.1.0"
description = ""
authors = ["Dmitry Golubkov <dmitry.golubkov@datadvance.net>"]

[tool.poetry.dependencies]
python = ">=3.6"
beautifulsoup4 = "^4.8"
requests = "^2.22"
pyppeteer = "^0.0.25"
syncer = "^1.3"
websockets = "=6.0"
asyncio = "^3.4"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"
rope = "^0.14.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
